--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -1639,7 +1639,7 @@ iframe {
 /*-------------FAQ MENU--------------*/
 
 .faq {
-    background-color: #0B0C10;
+    background-color: black;
     max-height: 854px;
 }
 
@@ -1653,6 +1653,9 @@ iframe {
     flex-direction: column;
     flex: 2 2;
     padding: 100px 0 100px 100px;
+    align-items: center;
+    height: 100%;
+    overflow: hidden;
 }
 
 .faq-content {
@@ -1663,47 +1666,71 @@ iframe {
 }
 
 .faq-photo img {
-    height: 100%;
-    width: 100%;
+    padding-left: 100px;
+    max-width: 940px;
+    max-height: 845px;
+    object-fit: contain;
+    transition: transform 0.2s ease-out;
+}
+
+.panel.active + .faq-photo img {
+    transform: scale(0.8);
 }
 
 .accordion {
-    background-color: #eee;
-    color: #444;
+    background-color: black;
+    color: white;
     cursor: pointer;
     padding: 18px;
     width: 100%;
-    border: none;
     text-align: left;
     outline: none;
     font-size: 15px;
     transition: 0.4s;
+    border: 1px solid gray;
 }
 
 .active, .accordion:hover {
-    background-color: #ccc;
+    background-color: black;
+    border: 1px solid turquoise;
 }
 
 .accordion:after {
-    content: '\002B';
-    color: #777;
+    content: '\22C0';
+    color: gray;
     font-weight: bold;
     float: right;
     margin-left: 5px;
+
 }
 
 .active:after {
-    content: "\2212";
+    content: "\22C1";
+    color: turquoise;
 }
 
 .panel {
-    padding: 0 18px;
-    background-color: white;
+    background-color: black;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+    padding: 20px;
+}
+
+.panel.active {
+    border: 1px solid turquoise;
+}
+
+.panel p {
+    margin: 30px;
+}
+
+.panel:after {
+    content: "";
+    display: none;
 }
 
 .menu-1, .menu-2, .menu-3 {
     padding-left: 125px;
+    margin-bottom: 10px;
 }
