JP GENERATION - SERVICES + FAQ

--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -1639,7 +1639,7 @@ iframe {
 /*-------------FAQ MENU--------------*/
 
 .faq {
-    background-color: black;
+    background-color: #121212;
     max-height: 854px;
 }
 
@@ -1651,18 +1651,19 @@ iframe {
 .faq-photo {
     display: flex;
     flex-direction: column;
-    flex: 2 2;
-    padding: 100px 0 100px 100px;
+    flex: 1 2;
+    padding: 100px 0 100px 370px;
     align-items: center;
     height: 100%;
     overflow: hidden;
+
 }
 
 .faq-content {
     display: flex;
     flex-direction: column;
     flex: 2 2;
-    padding: 100px 100px 100px 0;
+    padding: 100px 180px 100px 0;
 }
 
 .faq-photo img {
@@ -1673,56 +1674,80 @@ iframe {
     transition: transform 0.2s ease-out;
 }
 
-.panel.active + .faq-photo img {
+.panel.activefaq + .faq-photo img {
     transform: scale(0.8);
 }
 
 .accordion {
-    background-color: black;
-    color: white;
+    background-color: #121212;
     cursor: pointer;
-    padding: 18px;
+    padding: 29px;
     width: 100%;
     text-align: left;
     outline: none;
-    font-size: 15px;
     transition: 0.4s;
-    border: 1px solid gray;
+    border: 1px solid #363636;
 }
 
-.active, .accordion:hover {
-    background-color: black;
-    border: 1px solid turquoise;
+.btn-text {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: #FCFCFC;
+    margin: 3px;
+}
+
+.activefaq, .accordion:hover {
+    background-color: #121212;
+    border: 1px solid #66fcf1;
 }
 
 .accordion:after {
     content: '\22C0';
-    color: gray;
+    color: #363636;
     font-weight: bold;
     float: right;
     margin-left: 5px;
 
 }
 
-.active:after {
+.activefaq:after {
     content: "\22C1";
-    color: turquoise;
+    color: #66fcf1;
 }
 
 .panel {
-    background-color: black;
+    background-color: #121212;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.2s ease-out;
-    padding: 20px;
+    transition: max-height 0.4s ease-out;
 }
 
-.panel.active {
-    border: 1px solid turquoise;
+.panel.activefaq {
+    border: 1px solid #66fcf1;
 }
 
 .panel p {
+    font-size: 15px;
+    text-align: left;
+    line-height: 20px;
+    font-weight: 300;
+    color: #D0D0D0;
+    font-family: 'Heebo', sans-serif;
+    word-break: keep-all;
+    max-width: 450px;
     margin: 30px;
+}
+
+.text-link {
+    font-size: 15px;
+    text-align: left;
+    line-height: 20px;
+    font-weight: 300;
+    color: #66fcf1;
+    text-decoration: none;
+    font-family: 'Heebo', sans-serif;
+    word-break: keep-all;
 }
 
 .panel:after {
@@ -1732,5 +1757,5 @@ iframe {
 
 .menu-1, .menu-2, .menu-3 {
     padding-left: 125px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
