--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -1907,36 +1907,40 @@ ol li {
 }
 
 .content-price-1 > div {
-    background-color: #121212;
-    padding: 30px;
+    padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
 }
+.block-gray {
+    background-color: #121212;
+    border: 2px solid transparent;
+}
+
+.block-black {
+    background-color: #000000;
+    border: 2px solid #121212;
+}
 
 .content-price-2 > div {
-    background-color: #121212;
-    padding: 30px;
+    padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
 }
 
 .content-price-3 > div {
-    background-color: #121212;
-    padding: 30px;
+    padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
 }
 
 .content-price-4 > div {
-    background-color: #121212;
-    padding: 30px;
+    padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
 }
 
 .content-price-5 > div {
-    background-color: #121212;
-    padding: 30px;
+    padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
 }
@@ -1973,6 +1977,7 @@ ol li {
     text-transform: uppercase;
     font-weight: 600;
     max-width: 293px;
+    margin: 0 0 0 15px;
 }
 
 .content-price-2 h2 {
@@ -1982,6 +1987,7 @@ ol li {
     text-transform: uppercase;
     font-weight: 600;
     max-width: 293px;
+    margin: 0 0 0 15px;
 }
 
 .content-price-3 h2 {
@@ -1991,6 +1997,7 @@ ol li {
     text-transform: uppercase;
     font-weight: 600;
     max-width: 293px;
+    margin: 0 0 0 15px;
 }
 
 .content-price-4 h2 {
@@ -2000,6 +2007,7 @@ ol li {
     text-transform: uppercase;
     font-weight: 600;
     max-width: 293px;
+    margin: 0 0 0 15px;
 }
 
 .content-price-5 h2 {
@@ -2009,6 +2017,7 @@ ol li {
     text-transform: uppercase;
     font-weight: 600;
     max-width: 293px;
+    margin: 0 0 0 15px;
 }
 
 .min-order {
@@ -2018,7 +2027,7 @@ ol li {
     text-transform: uppercase;
     font-weight: 300;
     max-width: 293px;
-    margin-top: 24px;
+    margin: 24px 0 0 15px;
 }
 
 .order-text {
@@ -2027,7 +2036,7 @@ ol li {
     color: #FCFCFC;
     font-weight: 500;
     max-width: 293px;
-    margin-top: 24px;
+    margin: 24px 0 0 15px;
 }
 
 .content-price-1 hr {
@@ -2075,14 +2084,36 @@ ol li {
     padding: 12px 0 10px 0;
 }
 
-.btn-price {
+.btn-price-gray {
+    margin-top: 24px;
+    background-color: #121212;
+    height: 47px;
+    text-align: center;
+}
+
+.btn-price-gray:hover {
+    border: 2px solid #66fcf1;
+    transition: 0.4s;
+}
+
+.btn-price-black {
     margin-top: 24px;
     background-color: #000000;
     height: 47px;
     text-align: center;
 }
 
-.btn-price:hover {
+.btn-price-black:hover {
     border: 2px solid #66fcf1;
     transition: 0.4s;
+}
+
+.spacer-price-text {
+    display: block;
+    height: 35px;
+}
+
+.spacer-price-li {
+    display: block;
+    height: 24px;
 }
