--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -52,6 +52,7 @@ span {
 
 .topnav a:hover {
     color: #66FCF1;
+    transition: .4s;
 }
 
 .nav-complet {
@@ -152,18 +153,21 @@ span {
 }
 
 /* Add a dark background on topnav links and the dropdown button on hover */
-.topnav a:hover, .dropdown:hover .dropbtn {
+.topnav a:hover,.dropbtn:hover i, .dropdown:hover .dropbtn {
     color: #66FCF1;
+    transition: .4s;
 }
 
 /* Add a grey background to dropdown links on hover */
 .dropdown-content a:hover {
     color: #66FCF1;
+    transition: .4s;
 }
 
 /* Show the dropdown menu when the user moves the mouse over the dropdown button */
 .dropdown:hover .dropdown-content {
     display: block;
+    transition: .4s;
 }
 
 .container {
@@ -214,14 +218,14 @@ span {
     height: 10px;
     width: 10px;
     margin: 0 2px;
-    background-color: #FCFCFC;
+    background-color: #717171;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
 }
 
 .active-slid {
-    background-color: #717171;
+    background-color: #66FCF1;
 }
 
 .dot-div {
@@ -1023,6 +1027,9 @@ header > .skills {
     font-size: 16px;
     margin: 9px 0 0 0;
     padding: 0 0 9px 0;
+    max-width: 270px;
+    display: flex;
+    align-items: center;
 }
 
 .fot-text > a {
@@ -1030,7 +1037,6 @@ header > .skills {
     padding: 0 0 0 12px;
     color: #FCFCFC;
     word-break: normal;
-    text-align: center;
     font-weight: 300;
 }
 
@@ -1038,6 +1044,7 @@ header > .skills {
     color: #66FCF1;
     font-weight: bold;
     font-size: 20px;
+    cursor: default;
 }
 
 .fot-text > a:hover {
@@ -1337,7 +1344,12 @@ i {
     transition: color 0.3s ease;
 }
 
-i:hover {
+#left:hover {
+    color: #66FCF1;
+    transition: 0.4s;
+}
+
+#right:hover {
     color: #66FCF1;
     transition: 0.4s;
 }
@@ -1455,8 +1467,7 @@ iframe {
 }
 
 .port-txt > i {
-    margin-left: 5px;
-    font-weight: lighter;
+    margin-left: 10px;
     font-size: 15px;
 }
 
