JP GENERATION - BUILDING PRICE LIST

--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -96,9 +96,9 @@ span {
 }
 
 /* Add an active class to highlight the current page */
-/*.active {
-    background-color: #66FCF1;
-}*/
+.active {
+    color: #66FCF1;
+}
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
