--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -1910,7 +1910,9 @@ ol li {
 }
 
 .content-price-2, .content-price-3,
-.content-price-4, .content-price-5 {
+.content-price-4, .content-price-5,
+.content-price-6, .content-price-7,
+.content-price-8, .content-price-9 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -1968,6 +1970,30 @@ ol li {
     flex: 1 3;
 }
 
+.content-price-6 > div {
+    padding: 40px 20px 40px 20px;
+    margin: 24px;
+    flex: 1 3;
+}
+
+.content-price-7 > div {
+    padding: 40px 20px 40px 20px;
+    margin: 24px;
+    flex: 1 3;
+}
+
+.content-price-8 > div {
+    padding: 40px 20px 40px 20px;
+    margin: 24px;
+    flex: 1 3;
+}
+
+.content-price-9 > div {
+    padding: 40px 20px 40px 20px;
+    margin: 24px;
+    flex: 1 3;
+}
+
 .content-price-1 h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 24px;
@@ -2018,6 +2044,46 @@ ol li {
     margin: 0 0 0 15px;
 }
 
+.content-price-6 h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    color: #FCFCFC;
+    text-transform: uppercase;
+    font-weight: 600;
+    max-width: 293px;
+    margin: 0 0 0 15px;
+}
+
+.content-price-7 h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    color: #FCFCFC;
+    text-transform: uppercase;
+    font-weight: 600;
+    max-width: 293px;
+    margin: 0 0 0 15px;
+}
+
+.content-price-8 h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    color: #FCFCFC;
+    text-transform: uppercase;
+    font-weight: 600;
+    max-width: 293px;
+    margin: 0 0 0 15px;
+}
+
+.content-price-9 h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    color: #FCFCFC;
+    text-transform: uppercase;
+    font-weight: 600;
+    max-width: 293px;
+    margin: 0 0 0 15px;
+}
+
 .min-order {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
@@ -2058,6 +2124,26 @@ ol li {
 }
 
 .content-price-5 hr {
+    margin-top: 24px;
+    opacity: 0.4;
+}
+
+.content-price-6 hr {
+    margin-top: 24px;
+    opacity: 0.4;
+}
+
+.content-price-7 hr {
+    margin-top: 24px;
+    opacity: 0.4;
+}
+
+.content-price-8 hr {
+    margin-top: 24px;
+    opacity: 0.4;
+}
+
+.content-price-9 hr {
     margin-top: 24px;
     opacity: 0.4;
 }
