--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -2208,3 +2208,38 @@ ol li {
     display: block;
     height: 23px;
 }
+
+/*-------------COSTUMERS-------------*/
+
+.costumers {
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 50px;
+    margin: 0 110px 0 110px;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.costumers > div {
+    flex: 1 3;
+}
+
+.photo-content {
+    margin: 8px;
+}
+
+.costumers-p {
+    max-height: 380px;
+    max-width: 380px;
+    filter: grayscale(90%);
+    border: 2px solid #121212;
+}
+
+.costumers-p:hover {
+    filter: grayscale(0);
+    transform: scale(1.05);
+    transition: 0.4s;
+    border: 2px solid turquoise;
+
+}
