--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -2240,6 +2240,219 @@ ol li {
     filter: grayscale(0);
     transform: scale(1.05);
     transition: 0.4s;
-    border: 2px solid turquoise;
+    border: 2px solid #66fcf1;
 
+}
+
+/*-------------ABOUT US-------------*/
+
+.about-us {
+    padding-top: 50px;
+    margin: 0 110px 0 110px;
+}
+
+.container-about-row {
+    display: flex;
+    flex-direction: row;
+    height: 630px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.container-about-col {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.container-about-col > img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    padding: 10px;
+}
+
+.container-about-row > img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    padding: 10px;
+}
+
+.about-text {
+    position: absolute;
+    padding-left: 40px;
+    max-width: 500px;
+}
+
+.about-text-2 {
+    position: absolute;
+    padding-left: 40px;
+    max-width: 600px;
+}
+
+.spacer-img-b {
+    padding: 0 0 460px;
+}
+
+.spacer-img-b2 {
+    padding: 0 0 180px;
+}
+
+.about-h3 {
+    margin: 8px 0 16px;
+    color: #FCFCFC;
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    max-width: 600px;
+}
+
+.about-h6 {
+    margin: 8px 0 16px;
+    color: #FCFCFC;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.who-we-are {
+    padding-top: 100px;
+    margin: 0 80px 0 80px;
+}
+
+.who-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.who-container > div {
+    display: flex;
+    flex-direction: column;
+    flex: 1 3;
+    padding: 0 40px 0 40px;
+}
+
+.who-h {
+    margin: 8px 0 16px;
+    color: #FCFCFC;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    max-width: 600px;
+}
+
+.who-p {
+    margin: 0 0 14px;
+    color: #D0D0D0;
+    font-family: 'Heebo', sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    max-width: 600px;
+}
+
+.border-who {
+    border-left: 2px solid #66fcf1;
+    border-right: 2px solid #66fcf1;
+}
+
+/*-------------CV-------------*/
+
+.cv {
+    padding: 100px 50px 100px 50px;
+    background-color: #121212;
+}
+
+
+/* Our Team
+-------------------------------------------------------*/
+.container-cv {
+    display: flex;
+    flex-direction: row;
+    padding-left: 110px;
+}
+
+.team-img img {
+    transition: all .2s ease-in-out;
+    overflow: hidden;
+    width: 100%;
+    max-height: 450px;
+}
+
+.team-member,
+.team-img {
+    position: relative;
+    overflow: hidden;
+}
+.team-title {
+    margin: 140px 0 7px;
+}
+
+.span-team {
+    color: #66FCF1;
+    font-family: 'Poppins', sans-serif;
+    margin: 140px 0 7px;
+}
+
+.overlay {
+    background-color: rgba(20,20,20,.7);
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: all .2s ease-in-out;
+}
+
+.team-details {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    padding: 5%;
+    overflow: hidden;
+    width: 100%;
+    z-index: 2;
+    transition: all .2s ease-in-out;
+}
+
+.team-img:hover .team-details {
+    opacity: 1;
+    margin-top: -80px;
+}
+
+.team-img:hover .overlay {
+    opacity: 1;
+}
+
+.socials a {
+    display: inline-block;
+    width: 37px;
+    height: 37px;
+    background-color: transparent;
+    justify-content: center;
+}
+
+.socials i {
+    line-height: 37px;
+    color: #121212;
+    font-size: 14px;
+    width: 37px;
+    height: 37px;
+    border-radius: 50%;
+    text-align: center;
+    transition: all 0.2s linear;
+}
+
+.team-details .socials i {
+    color: #FCFCFC;
+}
+
+.socials a:hover i {
+    color: #FCFCFC;
+    background-color: #121212;
 }
