--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -2377,13 +2377,6 @@ ol li {
     padding-left: 110px;
 }
 
-photo-team {
-    display: flex;
-    flex-direction: column;
-    flex: 1 2;
-    padding-left: 110px;
-}
-
 .about-team {
     display: flex;
     flex-direction: column;
@@ -2498,3 +2491,35 @@ photo-team {
     padding: 0 0 60px 0;
 }
 
+/*-------------CONTACT--------------*/
+.services-conta {
+    padding: 100px 50px 100px 50px;
+}
+
+.headline-conta {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.con-look-conta {
+    display: flex;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin: 20px 0 55px 0;
+    align-items: center;
+    justify-content: center;
+}
+
+.span-con {
+    color: #66FCF1;
+    font-family: 'Poppins', sans-serif;
+}
+
+.map {
+    height: 450px;
+    width: 100%;
+    filter: grayscale(100%);
+}
