--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -2523,3 +2523,47 @@ ol li {
     width: 100%;
     filter: grayscale(100%);
 }
+
+.map:hover {
+    filter: grayscale(30%);
+    transition: 0.4s;
+}
+
+.contact {
+    margin: 100px 110px 0 110px;
+}
+
+.contact-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.contact-col {
+    display: flex;
+    flex-direction: column;
+    flex: 1 3;
+    justify-items: center;
+    align-items: center;
+}
+
+.contact-col > h3 {
+    color: #FCFCFC;
+    font-size: 24px;
+    margin: 20px 0 16px;
+}
+
+.contact-col > p {
+    color: #66fcf1;
+    font-size: 15px;
+    margin: 0 0 14px;
+}
+
+.contact-col > i {
+    color: #66fcf1;
+    font-size: 40px;
+}
+
+.con-mid {
+    border-left: 2px solid #66fcf1;
+    border-right: 2px solid #66fcf1;
+}
