--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -2567,3 +2567,122 @@ ol li {
     border-left: 2px solid #66fcf1;
     border-right: 2px solid #66fcf1;
 }
+
+/*-------------CONTACT FORM--------------*/
+
+.form {
+    padding: 0 50px 100px 50px;
+}
+
+.form #name, #lastname,
+ #email, #subject {
+    min-width: 500px;
+    min-height: 50px;
+    background-color: #252525;
+    border: none;
+    margin: 10px;
+}
+
+.form #services {
+    min-width: 1020px;
+    min-height: 50px;
+    background-color: #252525;
+    border: none;
+    margin: 10px;
+}
+
+.form #message {
+    min-width: 1020px;
+    max-width: 1020px;
+    min-height: 150px;
+    max-height: 250px;
+    background-color: #252525;
+    border: none;
+    margin: 10px;
+}
+
+.form-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.center{
+    text-align: center;
+}
+
+#toast {
+    visibility: hidden;
+    min-width: 450px;
+    margin-left: -200px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+    color: forestgreen;
+    text-align: center;
+    border-radius: 10px;
+    padding: 16px;
+    position: fixed;
+    z-index: 999;
+    left: 50%;
+    bottom: 30px;
+    font-size: 16px;
+}
+
+#toast.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
+.checkicon i{
+    font-size: 40px;
+    color: #47d764;
+}
+
+.submit-btn {
+    padding: 18px 40px;
+    background-color: transparent;
+    margin: 25px 0 0 0;
+    border: 2px solid #66fcf1;
+    transition: 0.4s;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Heebo', sans-serif;
+    color: #FCFCFC;
+    font-size: 15px;
+}
+
+.submit-btn:hover {
+    border: 2px solid #4fc2b9;
+    animation-delay: 0.4s;
+    box-shadow: inset 10px 1px 70px 10px rgba(79, 194, 185, 0.7);
+    transition: 0.4s;
+}
