JP GENERATION - CONTACT BUILDING

--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -1102,7 +1102,7 @@ header > .skills {
     color: #fff;
 }
 
-.overlay-img {
+.overlay-img-jp {
     position: absolute;
     top: 0;
     left: 0;
@@ -1741,6 +1741,10 @@ i {
     padding: 100px 50px 0 50px;
 }
 
+.video {
+    padding: 0 0 300px 0;
+}
+
 .video-row {
     display: flex;
     display: -webkit-box;
@@ -2330,6 +2334,9 @@ ol li {
 
 .content-price-1 {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 50px;
@@ -2341,6 +2348,9 @@ ol li {
 .content-price-6, .content-price-7,
 .content-price-8, .content-price-9 {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 25px;
@@ -2351,6 +2361,9 @@ ol li {
     padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 .block-gray {
     background-color: #121212;
@@ -2385,48 +2398,72 @@ ol li {
     padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 
 .content-price-3 > div {
     padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 
 .content-price-4 > div {
     padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 
 .content-price-5 > div {
     padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 
 .content-price-6 > div {
     padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 
 .content-price-7 > div {
     padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 
 .content-price-8 > div {
     padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 
 .content-price-9 > div {
     padding: 40px 20px 40px 20px;
     margin: 24px;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 
 .content-price-1 h2 {
@@ -2656,6 +2693,9 @@ ol li {
 
 .costumers {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-wrap: wrap;
     padding-top: 50px;
     margin: 0 110px 0 110px;
@@ -2666,6 +2706,9 @@ ol li {
 
 .costumers > div {
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
+
 }
 
 .photo-content {
@@ -2702,6 +2745,9 @@ ol li {
 
 .container-about-row {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: row;
     height: 630px;
     width: 100%;
@@ -2710,6 +2756,9 @@ ol li {
 
 .container-about-col {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: column;
     height: 100%;
     width: 100%;
@@ -2778,13 +2827,21 @@ ol li {
 
 .who-container {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: row;
 }
 
 .who-container > div {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: column;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
     padding: 0 40px 0 40px;
 }
 
@@ -2823,20 +2880,33 @@ ol li {
 -------------------------------------------------------*/
 .container-cv {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: row;
     flex: 1 2;
+    -webkit-flex: 1 2;
+    -ms-flex: 1 2;
     padding-left: 110px;
 }
 
 .about-team {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: column;
     flex: 1 2;
+    -webkit-flex: 1 2;
+    -ms-flex: 1 2;
     padding: 0 110px 0 110px;
     height: 20px;
 }
 .about-born {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: column;
 }
 
@@ -2868,7 +2938,7 @@ ol li {
     margin: 140px 0 0 120px;
 }
 
-.overlay {
+.overlay-photo {
     background-color: rgba(20,20,20,.7);
     position: absolute;
     top: 0;
@@ -2953,8 +3023,13 @@ ol li {
 
 .skill-list-2 {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: column;
     flex: 1 2;
+    -webkit-flex: 1 2;
+    -ms-flex: 1 2;
     padding: 0 0 60px 0;
 }
 
@@ -2965,6 +3040,9 @@ ol li {
 
 .headline-conta {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -2973,6 +3051,9 @@ ol li {
 
 .con-look-conta {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     text-transform: uppercase;
     font-weight: 500;
     margin: 20px 0 55px 0;
@@ -3007,13 +3088,21 @@ ol li {
 
 .contact-row {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: row;
 }
 
 .contact-col {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: column;
     flex: 1 3;
+    -webkit-flex: 1 3;
+    -ms-flex: 1 3;
     justify-items: center;
     align-items: center;
 }
@@ -3104,6 +3193,9 @@ ol li {
 
 .form-row {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -3111,6 +3203,9 @@ ol li {
 
 .form-wrap {
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
