--- a/plne-responzivny-web/css/style.css
+++ b/plne-responzivny-web/css/style.css
@@ -2131,7 +2131,7 @@ iframe {
 
 .faq {
     background-color: #121212;
-    max-height: 854px;
+    max-height: 1280px;
 }
 
 .faq-cointainer {
@@ -2151,7 +2151,7 @@ iframe {
     flex: 1 2;
     -webkit-flex: 1 2;
     -ms-flex: 1 2;
-    padding: 100px 0 100px 370px;
+    padding: 100px 0 100px 320px;
     align-items: center;
     height: 100%;
     overflow: hidden;
@@ -2171,11 +2171,9 @@ iframe {
 }
 
 .faq-photo img {
-    padding-left: 100px;
+    margin-top: 100px;
     max-width: 940px;
-    max-height: 845px;
-    object-fit: contain;
-    -o-object-fit: contain;
+    max-height: 945px;
     transition: transform 0.2s ease-out;
     -webkit-transition: transform 0.2s ease-out;
     -moz-transition: transform 0.2s ease-out;
@@ -2190,7 +2188,7 @@ iframe {
 .accordion {
     background-color: #121212;
     cursor: pointer;
-    padding: 29px;
+    padding: 35px;
     width: 100%;
     text-align: left;
     outline: none;
@@ -2200,6 +2198,13 @@ iframe {
     -o-transition: 0.4s;
     -ms-transition: 0.4s;
     border: 1px solid #363636;
+    display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    flex-direction: row;
+    justify-items: center;
+    align-items: center;
 }
 
 .btn-text {
@@ -2207,7 +2212,11 @@ iframe {
     font-size: 16px;
     font-weight: 600;
     color: #FCFCFC;
-    margin: 3px;
+    display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    flex-direction: row;
 }
 
 .activefaq, .accordion:hover {
@@ -2277,7 +2286,8 @@ iframe {
     display: none;
 }
 
-.menu-1, .menu-2, .menu-3 {
+.menu-1, .menu-2, .menu-3,
+.menu-4, .menu-5 {
     padding-left: 125px;
     margin-bottom: 20px;
 }
